# doxabase

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CASE-STUDY-AIS.md  README.md  pyproject.toml
docs/: case-study-ais-full.md  worked-example.md
doxabase/: __init__.py  agent_docs.py  analysis_packet.py  core.py  mcp_server.py  mcp_tools.py  parquet_manifest.py  profile_manifest_merge.py  profile_to_capsule.py  report.py
doxabase_design_docs/: 01-doxabase-v1-design-brief.md  02-doxabase-v1-api-spec.md  03-doxabase-v1-storage-schema.md  04-doxabase-v2-backlog.md  05-rich-canopy-base-ontology.md  06-fresh-eyes-review-2026-07-03.md  07-distillation-program.md  08-mcp-surface-v2.md  09-distillation-retrospective.md  10-next-directions.md  11-capsule-observatory.md  12-rdf-method-contracts.md  13-capsule-workbench.md  14-anchored-derivations.md  README.md
doxybase/: __init__.py  agent_docs.py  core.py  mcp_server.py  mcp_tools.py
doxybase_design_docs/: 01-doxybase-v1-design-brief.md  02-doxybase-v1-api-spec.md  03-doxybase-v1-storage-schema.md  04-doxybase-v2-backlog.md  05-rich-canopy-base-ontology.md  README.md
examples/: _runtime_paths.py  adversarial-field-trial.py  ais-query-overlay-smoke.py  analysis-packet-manifest-smoke.py  first-workflow.py  local-csv-query-smoke.py  missing-metadata-query-repair-smoke.py  profile-frontier-workflow.py  profile-to-capsule-cookbook.py  query-evidence-storage-overlay-smoke.py  rich-profile-manifest-smoke.py  staged-semantic-repair-smoke.py
handoff/: codex-upgrade-continuation-2026-07-03.md  distillation-session-2026-07-04.md  fable-parting-notes-2026-07-06.md
ontology/: rc_core.ttl  rc_shapes.ttl
tests/: test_agent_docs.py  test_analysis_packet_cli.py  test_budgets.py  test_capsule_report.py  test_examples.py  (+9 more)
(+239 files in other folders)
