[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doxabase"
version = "0.2.0"
description = "A small local RDF memory capsule for data projects: agents supply judgement, DoxaBase supplies graph mechanics."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
# rdflib pinned <8: rdflib 7.6 emits Dataset deprecation warnings from its own
# parse internals; the removal lands in 8.0 and needs a deliberate migration.
dependencies = [
    "mcp[cli]>=1.27.2",
    "pyshacl>=0.31.0",
    "rdflib>=7.6.0,<8",
]

[project.optional-dependencies]
parquet = ["pyarrow>=17"]

[project.scripts]
doxabase-mcp = "doxabase.mcp_server:main"
doxabase-report = "doxabase.report:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["doxabase"]

# Runtime data ships inside the package as doxabase/_data/, mirroring the
# repo-root layout so path resolution is identical in both (see
# doxabase.core._data_root). docs/agent shrinks in program Phase 6.
[tool.hatch.build.targets.wheel.force-include]
"ontology" = "doxabase/_data/ontology"
"docs/agent" = "doxabase/_data/docs/agent"
"examples/manifest-prototype-rc" = "doxabase/_data/examples/manifest-prototype-rc"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # rdflib 7.6 raises these from its own Dataset.parse internals; not our
    # API usage. Revisit at the rdflib 8 migration (see pin above).
    "ignore:Dataset.default_context is deprecated:DeprecationWarning",
    "ignore:Dataset.identifier is deprecated:DeprecationWarning",
]
